--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
@@ -22,4 +22,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="monogram.ttf">
+      <Filter>Archivos de recursos</Filter>
+    </Font>
+  </ItemGroup>
 </Project>
