Cannon respawn, FX and Audio
**Cannon**
- Added a 2 second timer when the player is hit by a shot from the invaders.
- All game logic stops for 2 seconds.
- Added sound when the cannon fires.

**Shots**
- Added an explosion effect when the cannon shots reach the upper limit of the screen.
- Added an explosion effect when the invaders' shots hit the ground.

**Invaders**
- Added a destruction effect for when an invader is destroyed.
- The entire fleet stops if an invader is destroyed.
- The fleet moves immediately after the invader's destruction effect is displayed.
- Added sound when the invader fleet moves.
- Added sound when a ninvader is destroyed.

--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
@@ -27,4 +27,24 @@
       <Filter>Archivos de recursos</Filter>
     </Font>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="invaderkilled.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+    <Media Include="shoot.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+    <Media Include="fastinvader4.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+    <Media Include="fastinvader1.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+    <Media Include="fastinvader2.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+    <Media Include="fastinvader3.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
