--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj
@@ -145,6 +145,14 @@
   <ItemGroup>
     <Font Include="monogram.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="fastinvader1.wav" />
+    <Media Include="fastinvader2.wav" />
+    <Media Include="fastinvader3.wav" />
+    <Media Include="fastinvader4.wav" />
+    <Media Include="invaderkilled.wav" />
+    <Media Include="shoot.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\AllegroDeps.1.13.0\build\native\AllegroDeps.targets" Condition="Exists('..\packages\AllegroDeps.1.13.0\build\native\AllegroDeps.targets')" />
