Sprites and Audio fixes
**Cannon**
- Added a sprite for the cannon.

**Invaders**
- Added a sprite for each type of invader.
- Removed old graphics.

**Shots**
- Invader shots now have sprites.
- Cannon shots now have a sprite.

**FX**
- Added a sound when the cannon explodes.
- Added a sound when the cannon fires.
- Added a sound when an invader explodes.
- Added a sound when an invader shoots.
- Added a sprite when the cannon is destroyed.
- Added a sprite when an invader is destroyed.
- Added a sprite when a shot collides with the edges.

**HUD**
- Added a sprite for lives.
- Now sprites are displayed based on the number of lives of the player.

--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj
@@ -146,12 +146,16 @@
     <Font Include="monogram.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <Media Include="explosion.wav" />
     <Media Include="fastinvader1.wav" />
     <Media Include="fastinvader2.wav" />
     <Media Include="fastinvader3.wav" />
     <Media Include="fastinvader4.wav" />
     <Media Include="invaderkilled.wav" />
     <Media Include="shoot.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="spritesheet.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
