--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
@@ -46,5 +46,13 @@
     <Media Include="fastinvader3.wav">
       <Filter>Archivos de recursos</Filter>
     </Media>
+    <Media Include="explosion.wav">
+      <Filter>Archivos de recursos</Filter>
+    </Media>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="spritesheet.png">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
   </ItemGroup>
 </Project>
