Main screen and Game State
**Global**
- Modified the `GAME_STATE` enumeration:
- `GAME_STATE_MAIN_SCREEN`: Shows a start menu, the title and information about the points.
- `GAME_STATE_GAMEPLAY_RUNNING`: Update gameplay logic and graphics.
- `GAMER_STATE_GAMEPLAY_RESPAWNING`: Updates the logic of the timer to wait before continuing the gameplay logic.
- `GAME_STATE_GAMEOVER_WIN`: Used to display a GameOver message when the player destroys all invaders.
- `GAME_STATE_GAMEOVER_LOSE`: Used to display a GameOver message when the player loses.

**Main Screen**
- Shows an image as the title of the game.
- Shows the points of the invaders.
- Displays a text to wait for input from the player.

**Gameplay Screen**
- Moved all logic to the State Gameplay functions.

**Game Over Screen**
- Moved HUD logic that displayed GameOver texts to GameOver state functions.

--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj
@@ -155,6 +155,7 @@
     <Media Include="shoot.wav" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="game_title.png" />
     <Image Include="spritesheet.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
