--- a/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
+++ b/CPP Space Invaders/CPP Space Invaders/CPP Space Invaders.vcxproj.filters
@@ -54,5 +54,8 @@
     <Image Include="spritesheet.png">
       <Filter>Archivos de recursos</Filter>
     </Image>
+    <Image Include="game_title.png">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
   </ItemGroup>
 </Project>
